2006-02-13 Jim Garlick <garlick@speakeasy.net>

  * src/hp1630.c: verify CRC in learn strings on read/write [Adam Goldman]

  * src/gpib.c: in gpib_ibrd(), remove EOI assertion, continue reading until 
    EOI or zero ibcnt.

2006-02-09 Jim Garlick <garlick@speakeasy.net>

  * src/util.[ch]: New.

  * src/hp1630.c: Use read_all(), write_all() instead of getchar(), fread(),
    and fwrite() for save/restore/print.

  * src/hp1630.c: Cleanup save/restore functions.  
    - Check learn string length.  
    - Restore learn strings to the analyzer individually, checking
      status byte 4 on each restore.  
    - Display learn string cmd+lengths on save.

  * src/gpib.c: in gpib_ibrd(), assert that EOI is set.

2006-02-08 Jim Garlick <garlick@speakeasy.net>

  * src/hp1630.c: Add clear entry before date set [Adam Goldman]

2005-12-09 Jim Garlick <garlick@speakeasy.net>

  * src/*h: some gratuitous reformatting of text.

  * src/tek2230.c: New.

2005-12-01 Jim Garlick <garlick@speakeasy.net>

  * src/hp3455.c: Cleanup (make it like hp3457).

  * src/r5005.c: Cleanup (make it like hp3457).

  * src/dg535.c: New.

  * src/gpib.[ch]: New (factored).

2005-11-28 Jim Garlick <garlick@speakeasy.net>

  * src/errstr.[ch]: factored code from r5005.c and hp1630.c.

  * src/hp1630.c: Cleanup.
    - Add -c (clear), -l (local), and -v (verbose) options.
    - Remove -d (date), -r (reset) options.  Actually folded these into -c.
    - Changed short opt for --save-config from -c to -C
    - Moved table of sb4 errors to hp1630.h and removed #defines.
    - Restored _ibclr() function.

  * src/hp1630.h: fixed status byte bit definitions (was bit pos, now mask).
    Was incorrectly treating the bit positions as masks in checksrq().

2005-11-25 Jim Garlick <garlick@speakeasy.net>

  * src/hptodino.c: Forgot to update for new freqstr() prototype.  Fixed.

  * man/hptodino.1: New.

  * man/hptopbm.1: Added reference to thinkjettopbm(1), though it doesn't seem