@@ -1,9 +1,15 @@
 2006-02-13 Jim Garlick <garlick@speakeasy.net>
 
-  * src/hp1630.c: verify CRC in learn strings on read/write [Adam Goldman]
+  * src/hpcrc.[c,h]: New. CRC algorithm for hp1630. [Adam Goldman]
 
   * src/gpib.c: in gpib_ibrd(), remove EOI assertion, continue reading until 
     EOI or zero ibcnt.
+
+  * src/gpib.c: in gpib_ibwrt(), continue on a short read.
+
+  * src/hp1630.c: verify CRC on save/restore of learn strings.
+
+  * src/dinotrace.c: verify CRC on read of learn string.
 
 2006-02-09 Jim Garlick <garlick@speakeasy.net>
 
